--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ediviewer",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage" : "https://cbuschka.github.io/ediviewer",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
