--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "ediviewer",
   "version": "0.1.0",
   "private": false,
-  "homepage" : "https://cbuschka.github.io/ediviewer",
+  "homepage": "https://cbuschka.github.io/ediviewer",
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=14.17.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.2",
     "react-scripts": "5.0.0"
   },
   "scripts": {
@@ -34,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
