--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-scripts": "5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "REACT_APP_GIT_COMMITISH=`git rev-parse --short HEAD --always --dirty` REACT_APP_BUILD_TIMESTAMP=`date --rfc-3339=seconds` react-scripts start",
+    "build": "REACT_APP_GIT_COMMITISH=`git rev-parse --short HEAD --always --dirty` REACT_APP_BUILD_TIMESTAMP=`date --rfc-3339=seconds` react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
