--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": ">=14.17.0"
   },
   "dependencies": {
+    "@cbuschka/flux": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
